--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,5 +2,6 @@
   <button md-icon-button (click) = "openSidebar()">
     <md-icon>menu</md-icon>
   </button>
-  <span>企业协作平台</span>
+  <!-- <md-icon svgIcon="avatars"></md-icon> -->
+  <span>测试协作平台</span>
 </md-toolbar>
