--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
 <md-toolbar color="primary">
   <span class="fill-remaining-space"></span>
-  <span>&copy; angular版企业管理系统</span>
+  <span>&copy; angular版测试系统</span>
   <span class="fill-remaining-space"></span>
 </md-toolbar>
