--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,14 +1,20 @@
-<md-card>
-  <md-card-header>
-    <md-card-title>登陆</md-card-title>
-  </md-card-header>
-  <md-card-content>
-    <md-input-container>
-      <input mdInput type="text" placeholder="您的email">
-    </md-input-container>
-  </md-card-content>
-  <md-card-actions>
-    <p>还没有账户？<a href="">注册</a></p>
-    <p>忘记密码<a href="">找回</a></p>
-  </md-card-actions>
-</md-card>
+<form>
+  <md-card>
+    <md-card-header>
+      <md-card-title>登录</md-card-title>
+    </md-card-header>
+    <md-card-content>
+      <md-input-container class="full-width">
+        <input mdInput type="text" placeholder="请输入email">
+      </md-input-container>
+      <md-input-container class="full-width">
+        <input mdInput type="password" placeholder="请输入密码">
+      </md-input-container>
+      <button md-raised-button type="button">登录</button>
+    </md-card-content>
+    <md-card-actions class="text-right">
+      <p>是否注册？<a href="">注册</a></p>
+      <p>忘记密码？<a href="">找回</a></p>
+    </md-card-actions>
+  </md-card>
+</form>
