--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -17,4 +17,19 @@
       <p>忘记密码？<a href="">找回</a></p>
     </md-card-actions>
   </md-card>
+
+  <md-card>
+    <md-card-header>
+      <md-card-title>
+        每日佳句
+      </md-card-title>
+      <md-card-subtitle>
+        今天说点儿啥呢？
+      </md-card-subtitle>
+    </md-card-header>
+    <img md-card-image src="/assets/img/quote_fallback.jpg" alt="">
+    <md-card-content>
+      WHAT THE FXCK DAY！
+    </md-card-content>
+  </md-card>
 </form>
