--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,12 +1,11 @@
 md-card {
-    width: 20em;
-    margin: 5px 5px; 
+    height: 20em;
     flex: 0 0 20em;
 }
 
 form {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     width: 100%;
