--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -3,5 +3,7 @@
     <md-icon>menu</md-icon>
   </button>
   <!-- <md-icon svgIcon="avatars"></md-icon> -->
-  <span>测试协作平台</span>
+  <span>项目管理平台</span>
+  <span class="fill-remaining-space"></span>
+  <md-slide-toggle (change)="onChange($event.checked)">黑夜模式</md-slide-toggle>
 </md-toolbar>
