--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -13,7 +13,7 @@
       <button md-raised-button type="button">登录</button>
     </md-card-content>
     <md-card-actions class="text-right">
-      <p>是否注册？<a href="">注册</a></p>
+      <p>是否注册？<a routerLink="/register">注册</a></p>
       <p>忘记密码？<a href="">找回</a></p>
     </md-card-actions>
   </md-card>
