--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -19,7 +19,7 @@
     <span md-line md-subheader>按周查看任务</span>
   </md-list-item>
   <md-list-item>
-    <md-icon md-list-icon [svgIcon]="day"></md-icon>
+    <md-icon md-list-icon [svgIcon]="today"></md-icon>
     <span md-line>日视图</span>
     <span md-line md-subheader>按天查看任务</span>
   </md-list-item>
