--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,7 +1,8 @@
-<app-project-item *ngFor="let project of projects" [item]="project" class="car">
+<app-project-item *ngFor="let project of projects" 
+  [item]="project" class="card" (onInvite)="launchInviteDialog()">
 
 </app-project-item>
 
-<button nd-fab type="button" (click)="openNewProjectDialog()">
+<button class="fab-button" md-fab type="button" (click)="openNewProjectDialog()">
   <md-icon>add</md-icon>
 </button>
