--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -4,6 +4,6 @@
   </app-task-list>
 </div>
 
-<button md-fab class="fab-button" >
+<button md-fab class="fab-button" type="button" (click)="openNewProjectDialog()">
   <md-icon>add</md-icon>
 </button>
