--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -1,6 +1,13 @@
-<div class="tasklists">
-  <app-task-list *ngFor="let list of lists" >
-
+<div class="task-lists">
+  <app-task-list *ngFor="let list of lists" class="list-container">
+    <app-task-header 
+      [header]="list.name"
+      (newTask)="launchNewTaskDialog()">
+    </app-task-header>
+    <app-task-item
+      *ngFor="let task of list.tasks" 
+      [item]="task">
+    </app-task-item>
   </app-task-list>
 </div>
 
