--- a/src/app/project/project-list/project-list.component.html
+++ b/src/app/project/project-list/project-list.component.html
@@ -1,5 +1,10 @@
 <app-project-item *ngFor="let project of projects" 
-  [item]="project" class="card" (onInvite)="launchInviteDialog()">
+  [item]="project" 
+  class="card" 
+  (onInvite)="launchInviteDialog()"
+  (onEdit)="launchEditDialog()"
+  (onDel)="launchDelDialog()"
+  >
 
 </app-project-item>
 
