--- a/src/app/task/copy-task/copy-task.component.html
+++ b/src/app/task/copy-task/copy-task.component.html
@@ -1,14 +1,14 @@
 <form>
-    <h2 md-dialog-title>移动本列表所有内容</h2>
-    <div md-dialog-content>
-      <md-input-container class="full-width">
-        <input mdInput type="text" placeholder="项目名称">
-      </md-input-container><md-input-container class="full-width">
-        <input mdInput type="text" placeholder="项目描述">
-      </md-input-container>
-    </div>
-    <div md-dialog-actions>
-      <button type="button" md-raised-button color="primary" (click)="onSave()">保存</button>
-      <button type="button" md-button md-dialog-close>关闭</button>
-    </div>
-  </form>
+  <h3 md-dialog-title>移动本列表所有内容</h3>
+  <div md-dialog-content>
+    <md-select placeholder="请选择目标列表" class="full-width">
+      <md-option *ngFor="let list of lists" [value]="list">
+        {{list.name}}
+      </md-option>
+    </md-select>
+  </div>
+  <div md-dialog-actions>
+    <button type="button" md-raised-button color="primary" (click)="onSave()">保存</button>
+    <button type="button" md-button md-dialog-close>关闭</button>
+  </div>
+</form>
