--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -2,15 +2,19 @@
   <app-task-list *ngFor="let list of lists" class="list-container">
     <app-task-header 
       [header]="list.name"
-      (newTask)="launchNewTaskDialog()">
+      (newTask)="launchNewTaskDialog()"
+      (moveAll)="launchCopyTaskDialog()"
+      (delList)="launchConfirmDialog()"
+      (editList)="launchEditListDialog()">
     </app-task-header>
     <app-task-item
       *ngFor="let task of list.tasks" 
-      [item]="task">
+      [item]="task"
+      (taskClick)="launchUpdateTaskDialog(task)">
     </app-task-item>
   </app-task-list>
 </div>
 
-<button md-fab class="fab-button" type="button" (click)="openNewProjectDialog()">
+<button md-fab class="fab-button" type="button" (click)="launchNewListDialog()">
   <md-icon>add</md-icon>
 </button>
